2012-03-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* doc/example.auth.conf: Add a simple example for "ldap_connect"
	authentication configuration (this is an exclusive per-user
	authentication without authorization).

2012-03-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_connect_authenticate):
	Do not call ldap_user_exists, only bind. Also, undbind.

	* misc/openvas_auth.c (add_authenticator): Do not use ldap_user_exists
	but the "classic" file-exist for ldap_connect authenticator.

	* misc/ldap_auth.c (ldap_auth_new): Allow NULL for certain parameters.

2012-03-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Ensure the newline
	after the actual result text is always placed where it was before.
	This lowers the number of changed results texts significantly.

2012-03-13  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Add support for using the
	scanner preferences result_prepend_tags and result_append_tags to
	prepend or append tag contents to the description of a result. This is
	convenience functionality in preparation for the breaking up of the
	NVT description block and adding proper handling of refined meta
	information all over the OpenVAS Framework.

2012-03-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_misc_funcs.c: Added NASL_EXIT_DEPRECATED.
	(nasl_do_exit): Added a comment to remind on this reserved
	exit code for future handling.

2012-03-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* nasl/nasl_scanner_glue.c (security_message): Use HUGE_VAL because
	HUGE_VALF is for strtof, and add missing negation.

2012-03-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+rc2.

2012-03-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 5.0+rc1 release.

	* CHANGES: Updated.